# even-cpp

./: .gitattributes  .gitignore  .gitmodules  Doxyfile  README.md  build.msys2.sh  build.ubuntu.sh  patch.diff  readme.txt
common/include/core/: Catch.hxx  Config.hxx  Exposition.hxx  Logger.hxx  SignalHandler.hxx  Singleton.hxx  Storage.hxx  Transaction.hxx  TransactionTree.hxx  Value.hxx  Wallet.hxx
common/include/web/: WebServer.hxx
common/include/widgets/: Chart.hxx  ChartEasy.hxx  ValueSlider.hxx
common/src/core/: Application.cxx  Config.cxx  Exposition.cxx  FileConfig.cxx  Hash.cxx  Logger.cxx  SignalHandler.cxx  Transaction.cxx  Value.cxx
common/src/widgets/: Chart.cxx
doc/html/: _account_8cxx.html  _account_8cxx__incl.dot  _account_8cxx__incl.md5  _account_8cxx_source.html  _account_8hxx.html  _account_8hxx__dep__incl.dot  _account_8hxx__dep__incl.md5  _account_8hxx__incl.dot  _account_8hxx__incl.md5  _account_8hxx_source.html  _application_8cxx.html  _application_8cxx__incl.dot  _application_8cxx__incl.md5  _application_8cxx_source.html  _application_8hxx.html  _application_8hxx__dep__incl.dot  _application_8hxx__dep__incl.md5  _application_8hxx__incl.dot  _application_8hxx__incl.md5  _application_8hxx_source.html  _boffin_app_8cxx.html  _boffin_app_8cxx__incl.dot  _boffin_app_8cxx__incl.md5  _boffin_app_8cxx_source.html  _boffin_app_8hxx.html  _boffin_app_8hxx__dep__incl.dot  _boffin_app_8hxx__dep__incl.md5  _boffin_app_8hxx__incl.dot  _boffin_app_8hxx__incl.md5  _boffin_app_8hxx_source.html  _c_1_2projects_2github-even-cpp-dev_2prerequisites_2c-ipfs_2include_2ipfs_2util_2thread_pool_8h-example.html  _c_1_2projects_2github-even-cpp-dev_2prerequisites_2c-libp2p_2include_2libp2p_2utils_2thread_pool_8h-example.html  _call_once_8hxx.html  _call_once_8hxx__dep__incl.dot  _call_once_8hxx__dep__incl.md5  _call_once_8hxx__incl.dot  _call_once_8hxx__incl.md5  _call_once_8hxx_source.html  _catch_8cxx_source.html  _catch_8hxx_source.html  (+7869 more)
doc/html/search/: all_1.js  all_10.js  all_11.js  all_12.js  all_14.js  all_15.js  all_16.js  all_18.js  all_19.js  all_1a.js  all_1b.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  classes_0.js  classes_1.js  classes_10.js  classes_11.js  classes_12.js  classes_13.js  classes_14.js  classes_15.js  classes_16.js  classes_17.js  classes_18.js  classes_19.js  classes_1a.js  classes_2.js  classes_3.js  classes_4.js  (+135 more)
doc/latex/: _account_8cxx.tex  _account_8cxx__incl.dot  _account_8cxx__incl.md5  _account_8hxx.tex  _account_8hxx__dep__incl.dot  _account_8hxx__dep__incl.md5  _account_8hxx__incl.dot  _account_8hxx__incl.md5  _application_8cxx.tex  _application_8cxx__incl.dot  _application_8cxx__incl.md5  _application_8hxx.tex  _application_8hxx__dep__incl.dot  _application_8hxx__dep__incl.md5  _application_8hxx__incl.dot  _application_8hxx__incl.md5  _boffin_app_8cxx.tex  _boffin_app_8cxx__incl.dot  _boffin_app_8cxx__incl.md5  _boffin_app_8hxx.tex  _boffin_app_8hxx.tex.tmp  _boffin_app_8hxx__dep__incl.dot  _boffin_app_8hxx__dep__incl.md5  _boffin_app_8hxx__incl.dot  _boffin_app_8hxx__incl.md5  _c_1_2projects_2github-even-cpp-dev_2prerequisites_2c-ipfs_2include_2ipfs_2util_2thread_pool_8h-example.tex  _c_1_2projects_2github-even-cpp-dev_2prerequisites_2c-libp2p_2include_2libp2p_2utils_2thread_pool_8h-example.tex  _call_once_8hxx.tex  _call_once_8hxx__dep__incl.dot  _call_once_8hxx__dep__incl.md5  _call_once_8hxx__incl.dot  _call_once_8hxx__incl.md5  _chart_8cxx.tex  _chart_8cxx__incl.dot  _chart_8cxx__incl.md5  _chart_easy_8cxx.tex  _chart_easy_8cxx__incl.dot  _chart_easy_8cxx__incl.md5  _chart_rscore_8h.tex  _chart_rscore_8h__dep__incl.dot  (+3554 more)
etc/: even-boffin.ini  even-boffin.web.ini
even-boffin/: CMakeLists.txt  README.md  even-boffin.pro  even-boffin.qrc
even-boffin/include/: Application.hxx  BoffinApp.hxx  Config.hxx  Controller.hxx  Logger.hxx  Network.hxx  Node.hxx  NodeNetwork.hxx  Value.hxx  signalhandler.hxx
even-boffin/nbproject/: configurations.xml  project.properties  project.xml
even-boffin/nbproject/private/: Default.properties  configurations.xml  private.xml
even-boffin/src/: Application.cxx  BoffinApp.cxx  Config.cxx  Controller.cxx  Logger.cxx  Network.cxx  Node.cxx  NodeNetwork.cxx  Value.cxx  datasource.cpp  main.cpp  signalhandler.cxx
even-boffin/www/: index.html  ledger.html  network.html  nodes.html  process.html  wallet.html
even-boffin/www/css/: boffin.css
even-boffin/www/js/: Action.js  Boffin.js  Common.js  Menu.js  Node.js  Nodes.js  Wallet.js  boffin.js
even-boffin/www/js/assets/: Action.js  Boffin.js  Ledger.js  Menu.js  Nodes.js  Wallet.js
even-node/: README.md
even-node/src/node/go/: hello.go
include/algorithms/: Rscore.hxx
include/core/: Account.hxx  Application.hxx  CallOnce.hxx  Catch.hxx  Config.hxx  Controller.hxx  Core.hxx  Defines.hxx  Exposition.hxx  FileConfig.hxx  Hash.hxx  Message.hxx  Random.hxx  Signalhandler.hxx  Singleton.hxx  Storage.hxx  Transaction.hxx  TransactionTree.hxx  Value.hxx  Wallet.hxx
include/web/: RequestHandler.hxx  SessionController.hxx  TemplateController.hxx  TemplateHolder.hxx  WebServer.hxx
include/widgets/: Chart.hxx  ChartEasy.hxx  Scene.hxx  ValueSlider.hxx
node/: README.md
prerequisites/: CMakeLists.txt
r-score-demo/: README.md  r-score-demo.pro  sample.md
r-score-demo/include/: Chart.h  ChartRscore.h  Controls.h
r-score-demo/src/: Chart.cpp  ChartRscore.cpp  Controls.cpp  main.cpp
src/algorithms/: Rscore.cxx
src/core/: Account.cxx  Application.cxx  Catch.cxx  Config.cxx  Controller.cxx  Exposition.cxx  FileConfig.cxx  Hash.cxx  Logger.cxx  Message.cxx  SignalHandler.cxx  Signalhandler.cxx  Storage.cxx  Transaction.cxx  TransactionTree.cxx  Value.cxx  Wallet.cxx
src/web/: RequestHandler.cxx  SessionController.cxx  TemplateController.cxx  TemplateHolder.cxx  WebServer.cxx
src/widgets/: Chart.cxx  ChartEasy.cxx  Painter.cxx  Scene.cxx  ValueSlider.cxx
(+10 files in other folders)
